<resources>
    <string name="app_name">Buddy</string>
    <!-- Strings related to login -->
    <string name="prompt_email">E-Mail</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password_repeat">Repeat password</string>
    <string name="prompt_key">Key</string>
    <string name="action_login">Log In</string>
    <string name="action_login_key">Log In with key</string>
    <string name="register_title">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_key">Get Key</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_username">Username must be set</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_repeat_password">Passwords do not match</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_failed">"Login failed"</string>
    <string name="key_how_work">How does it work?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="title_activity_login_register">LoginRegisterActivity</string>
    <string name="tab_register">Register</string>
    <string name="tab_login">Login</string>
    <string name="login_title">Login with existing Account</string>
    <string name="login_key_title">Login with key</string>
    <string name="action_register">Register</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="register_key_title">Register anonymously</string>
    <string name="title_activity_request_fragment">RequestFragment</string>
    <string name="copy_key_message">Please Store this key you need it in thee future to login</string>
    <string name="copy">Copy key and continue</string>
    <string name="updateUserData">Save Userdata</string>
    <string name="userdata">Userdata</string>
    <string name="updatePasswordData">Update Password</string>
    <string name="logout">Logout</string>
    <string name="passwordUpdatedSnackbar">Password Updated!</string>
    <string name="userdataUpdatedSnackbar">Userdata Updated!</string>

    <!-- Strings used for Chat -->
    <string name="message_placeholder">Message…</string>
    <string name="new_message">New Message!</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">MainActivity</string>

    <!-- texts for bottom navigation -->
    <string name="menu_chats">Chats</string>
    <string name="menu_requests">Requests</string>
    <string name="menu_mood_selector">Mood Selector</string>
    <string name="menu_karma">Karma</string>
    <string name="menu_profile">Profile</string>
    <string name="editTextHint_username">Username</string>
    <string name="editTextHint_email">E-Mail</string>
    <string name="editTextHint_password">Password</string>
    <string name="editTextHint_repeatPassword">Repeat Password</string>
    <string name="btn_save_profile">Save profile</string>
    <string name="btn_save_password">Save password</string>
    <string name="editTextHint_limit">Limit</string>
    <string name="editTextHint_description">Description</string>
    <string name="editTextHint_languages">Languages</string>
    <string name="btn_create_request">Create Request</string>
    <string name="btn_save_language">Save language</string>
    <string name="selectMood">Select Your Mood</string>
    <string name="editExtHint_EndDate">End of chatrequest</string>
    <string name="menu_new_request">Create new Request</string>
</resources>