<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/newRequestLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="70dp"
    tools:context=".ui.login.requests.RequestFragment">

    <Spinner
        android:id="@+id/spType"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"/>

    <EditText
        android:id="@+id/editLimit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spType"
        android:layout_marginTop="5dp"
        android:hint="@string/editTextHint_limit"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="100dp"/>

    <EditText
        android:id="@+id/editAdditionalInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editTextHint_addInformation"
        android:layout_below="@id/editLimit"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="100dp"
        />

    <EditText
        android:id="@+id/editLanguages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editAdditionalInformation"
        android:hint="@string/editTextHint_languages"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="100dp"/>

    <Button
        android:id="@+id/btnCreateRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_create_request"
        android:layout_below="@id/editLanguages"
        android:layout_marginLeft="20dp"
        />

</RelativeLayout>